# langchain-pinecone-ipc-search

./: Notes.md  README.md  chunking.py  database.py  document_loading.py  embeddings.py  main.py  pyproject.toml
