[project]
name = "advanced-langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.2",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "langchain-openrouter>=0.2.6",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "pinecone>=9.1.0",
    "pinecone-client>=6.0.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "tiktoken>=0.13.0",
]
